--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -259,7 +259,9 @@
       </div>
 
     </section><!-- /Services Section -->
-
+    <section class="section world-map-section">
+    <app-world-map/>
+    </section>
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
