--- a/src/app/components/world-map/world-map.component.scss
+++ b/src/app/components/world-map/world-map.component.scss
@@ -10,10 +10,8 @@ body {
   height: 100%;
   overflow: hidden;
   font-family: 'Poppins', sans-serif;
-  background-color: #f8f9fa;
-  border-radius: 8px;
+  background-color: #ffffff;
   padding: 20px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
 }
 
 .loader {
@@ -32,7 +30,7 @@ body {
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    animation: spin 1s linear infinite;
+    animation: spin 0.2s linear infinite;
   }
 
   p {
@@ -56,7 +54,7 @@ body {
     background-color: #e6f3ff; // Changed map background color to light blue
 
     path {
-      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+      transition: all 0.1s cubic-bezier(0.25, 0.8, 0.25, 1);
 
       &.interactive-country {
         cursor: pointer;
@@ -77,7 +75,7 @@ body {
       stroke: #ffffff;
       stroke-width: 1;
       cursor: pointer;
-      transition: transform 0.2s ease;
+      transition: transform 0.2s ease-in-out;
 
       &:hover {
         transform: scale(1.3);
