--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,7 +11,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
             <h2 class="sises-logo">SISES<br></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="mr-bedfort-regular">Explorez le monde , élevez votre avenir</p>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -19,7 +19,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
             <h2 class="sises-logo">SISES<br></h2>
-            <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+            <p class="mr-bedfort-regular">Explorez le monde , élevez votre avenir</p>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -27,7 +27,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
           <div class="carousel-container">
             <h2 class="sises-logo">SISES<br></h2>
-            <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+            <p class="mr-bedfort-regular">Explorez le monde , élevez votre avenir</p>
           </div>
         </div><!-- End Carousel Item -->
 
