--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -5,12 +5,21 @@
 }
 .sises-logo {
   font-family: 'Russo One', sans-serif;
-  font-size: 48px;
+  font-size: 128px;
   color: #d72027; /* matches the red tone */
   letter-spacing: 2px;
+  font-weight: 800;
 }
 .stretch-last-letter span:last-child {
   display: inline-block;
   transform: scaleX(1.8); /* Adjust stretch */
   transform-origin: left;
+}
+.mr-bedfort-regular {
+  font-family: "Mr Bedfort", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 64px;
+  color: #d72027; /* matches the red tone */
+
 }
