--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -52,43 +52,25 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-5 position-relative" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/about-1.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+          <div class="row">
+            <div class="col-lg-5 position-relative d-flex align-items-center justify-content-center" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/about-1.jpg" class="img-fluid" alt="">
+              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+            </div>
+            <div class="col-lg-7 content ps-lg-4 d-flex align-items-center" data-aos="fade-up" data-aos-delay="100">
+              <div>
+                <h3 class="sises-logo mb-5">QUI SOMMES NOUS ?</h3>
+                <p class="mt-2">
+                  SISES EST UNE SOCIÉTÉ INTERNATIONALE DE SERVICES ET ÉTUDES SUPÉRIEURES À L'ÉTRANGER AGRÉÉE PAR L'ÉTAT FONDÉE EN 1998. ELLE PERMET AUX NOUVEAUX BACHELIERS ET AUX ÉTUDIANTS DE POURSUIVRE LEURS ÉTUDES SUPÉRIEURES DANS DES INSTITUTIONS SUPÉRIEURES ÉTRANGÈRES ÉTATIQUES/PRIVÉES.
+                  ACTUELLEMENT, NOUS PROPOSONS NOS SERVICES DANS PLUSIEURS PAYS OU NOUS DISPOSONS DE BASES DE SUIVI DE NOS ÉTUDIANTS.
+                </p>
+                <div class="text-end mt-3">
+                  <span class="sises-span">SIESS</span>
+                </div>
+              </div>
+            </div>
           </div>
 
-          <div class="col-lg-7 content ps-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="sises-logo">QUI SOMMES NOUS ?</h3>
-            <p>
-              Dolor iure expedita id fuga asperiores qui sunt consequatur minima. Quidem voluptas deleniti. Sit quia molestiae quia quas qui magnam itaque veritatis dolores. Corrupti totam ut eius incidunt reiciendis veritatis asperiores placeat.
-            </p>
-            <ul>
-              <li>
-                <i class="bi bi-diagram-3"></i>
-                <div>
-                  <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                  <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
-                </div>
-              </li>
-              <li>
-                <i class="bi bi-fullscreen-exit"></i>
-                <div>
-                  <h5>Magnam soluta odio exercitationem reprehenderi</h5>
-                  <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
-                </div>
-              </li>
-              <li>
-                <i class="bi bi-broadcast"></i>
-                <div>
-                  <h5>Voluptatem et qui exercitationem</h5>
-                  <p>Et velit et eos maiores est tempora et quos dolorem autem tempora incidunt maxime veniam</p>
-                </div>
-              </li>
-            </ul>
-            <p>
-              Dolor iure expedita id fuga asperiores qui sunt consequatur minima. Quidem voluptas deleniti. Sit quia molestiae quia quas qui magnam itaque veritatis dolores. Corrupti totam ut eius incidunt reiciendis veritatis asperiores placeat.
-            </p>
-          </div>
 
         </div>
 
