--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -23,3 +23,10 @@
   color: #d72027; /* matches the red tone */
 
 }
+
+.sises-span {
+  font-family: 'Russo One', sans-serif;
+  color: #d72027; /* matches the red tone */
+  letter-spacing: 2px;
+  font-weight: 800;
+}
