--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -65,7 +65,7 @@
                   ACTUELLEMENT, NOUS PROPOSONS NOS SERVICES DANS PLUSIEURS PAYS OU NOUS DISPOSONS DE BASES DE SUIVI DE NOS ÉTUDIANTS.
                 </p>
                 <div class="text-end mt-3">
-                  <span class="sises-span">SIESS</span>
+                  <span class="sises-span">SISES</span>
                 </div>
               </div>
             </div>
