[FIX] Logo SISES & slogan

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,32 +4,32 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
-            <h2 class="sises-logo">SISES<br></h2>
-            <p class="mr-bedfort-regular">Explorez le monde , élevez votre avenir</p>
+            <img src="assets/img/sises-logo-XL.png" alt="SISES Logo" class="sises-logo">
+            <img src="assets/img/sises-slogan.png" alt="Explorez le monde , élevez votre avenir" class="carousel-text">
           </div>
         </div>
 
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
-            <h2 class="sises-logo">SISES<br></h2>
-            <p class="mr-bedfort-regular">Explorez le monde , élevez votre avenir</p>
+            <img src="assets/img/sises-logo-XL.png" alt="SISES Logo" class="sises-logo">
+            <img src="assets/img/sises-slogan.png" alt="Explorez le monde , élevez votre avenir" class="carousel-text">
           </div>
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
           <div class="carousel-container">
-            <h2 class="sises-logo">SISES<br></h2>
-            <p class="mr-bedfort-regular">Explorez le monde , élevez votre avenir</p>
+            <img src="assets/img/sises-logo-XL.png" alt="SISES Logo" class="sises-logo">
+            <img src="assets/img/sises-slogan.png" alt="Explorez le monde , élevez votre avenir" class="carousel-text">
           </div>
         </div><!-- End Carousel Item -->
+
 
         <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
@@ -42,6 +42,7 @@
         <ol class="carousel-indicators"></ol>
 
       </div>
+
 
     </section><!-- /Hero Section -->
 
@@ -59,7 +60,7 @@
             </div>
             <div class="col-lg-7 content ps-lg-4 d-flex align-items-center" data-aos="fade-up" data-aos-delay="100">
               <div>
-                <h3 class="sises-logo mb-5">QUI SOMMES NOUS ?</h3>
+                <h3 class="sises-logo-title mb-5">QUI SOMMES NOUS ?</h3>
                 <p class="mt-2">
                   SISES EST UNE SOCIÉTÉ INTERNATIONALE DE SERVICES ET ÉTUDES SUPÉRIEURES À L'ÉTRANGER AGRÉÉE PAR L'ÉTAT FONDÉE EN 1998. ELLE PERMET AUX NOUVEAUX BACHELIERS ET AUX ÉTUDIANTS DE POURSUIVRE LEURS ÉTUDES SUPÉRIEURES DANS DES INSTITUTIONS SUPÉRIEURES ÉTRANGÈRES ÉTATIQUES/PRIVÉES.
                   ACTUELLEMENT, NOUS PROPOSONS NOS SERVICES DANS PLUSIEURS PAYS OU NOUS DISPOSONS DE BASES DE SUIVI DE NOS ÉTUDIANTS.
@@ -82,7 +83,7 @@
     <!-- Services Section -->
     <!-- Services Section --><section id="services" class="services section">
     <!-- Section Title -->
-    <h2 class="sises-logo section-title" data-aos="fade-up">NOS SERVICES</h2>
+    <h2 class="sises-logo-title section-title" data-aos="fade-up">NOS SERVICES</h2>
 
     <div class="container">
       <div class="row gy-4">
@@ -157,6 +158,24 @@
       </div>
     </div>
   </section><!-- /Services Section -->
+  <!-- Call To Action Section -->
+  <section id="call-to-action" class="call-to-action section ">
+
+    <img src="assets/img/SISES-LOADING.jpg" alt="">
+
+    <div class="container">
+      <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
+        <div class="col-xl-10">
+          <div class="text-center">
+            <h3 class="stretch-title">Whatsapp</h3>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a class="stretch-last-letter span:last-child" href="#">Whatsapp</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section><!-- /Call To Action Section -->
 
 
     <section class="section world-map-section">
@@ -165,7 +184,7 @@
 
     <section id="certification" class="certification section">
 
-      <h2 class="sises-logo section-title" data-aos="fade-up">Certification</h2>
+      <h2 class="sises-logo+title section-title" data-aos="fade-up">Certification</h2>
 
       <div class="container">
         <div class="row gy-4 justify-content-center">
@@ -241,7 +260,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact section">
       <!-- Section Title -->
-      <h2 class="sises-logo section-title" data-aos="fade-up">Contact</h2>
+      <h2 class="sises-logo-title section-title" data-aos="fade-up">Contact</h2>
 
       <div class="container ">
         <div class="row justify-content-between">
@@ -250,7 +269,7 @@
             <div class="contact-hours">
               <h4 class="fw-bold">HORAIRES D'OUVERTURE</h4>
               <p>LUNDI - VENDREDI<br>8:00 - 17:00</p>
-              <p><strong>Email:</strong> contact@sises-tunisie.com</p>
+                <p><strong>Email:</strong> contact&#64;sises-tunisie.com</p>
               <div class="social-links mt-3">
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
