--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -159,7 +159,7 @@
     </div>
   </section><!-- /Services Section -->
   <!-- Call To Action Section -->
-  <section id="call-to-action" class="call-to-action section ">
+  <section id="call-to-action" class="call-to-action section">
 
     <img src="assets/img/SISES-LOADING.jpg" alt="">
 
@@ -167,9 +167,13 @@
       <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
         <div class="col-xl-10">
           <div class="text-center">
-            <h3 class="stretch-title">Whatsapp</h3>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="stretch-last-letter span:last-child" href="#">Whatsapp</a>
+            <!-- Replace the h3 with an image -->
+            <img src="assets/img/whatssap-text.png" alt="Whatsapp Logo" class="whatsapp-logo">
+
+            <p style="color: white; font-weight: bold;">Cliquez sur le bouton ci-dessous pour nous envoyer un message sur WhatsApp. Nous sommes là pour répondre à toutes vos questions !.</p>
+
+            <!-- Replace the anchor tag with a button -->
+            <button class="btn btn-primary">Contact via Whatsapp</button>
           </div>
         </div>
       </div>
@@ -178,13 +182,18 @@
   </section><!-- /Call To Action Section -->
 
 
-    <section class="section world-map-section">
-    <app-world-map/>
+
+    <section id="destination" class="section world-map-section ">
+      <div class="row">
+      <h2 class="sises-logo-title section-title" data-aos="fade-up">Destination</h2>
+    </div>
+    <div class="row">
+    <app-world-map/></div>
     </section>
 
-    <section id="certification" class="certification section">
+    <section id="certification" class="certification section colored-section">
 
-      <h2 class="sises-logo+title section-title" data-aos="fade-up">Certification</h2>
+      <h2 class="sises-logo-title section-title" data-aos="fade-up">Certification</h2>
 
       <div class="container">
         <div class="row gy-4 justify-content-center">
