--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 
 .sises-logo {
-  font-family: 'Russo One', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, sans-serif;
   font-size: 30px;
   color: white; /* matches the red tone */
   letter-spacing: 2px;
@@ -10,9 +10,15 @@ a:hover {
   color: red !important;
 }
 
-
+.sises-logo img {
+  width: 100%; /* Makes the image take up the full width of the container */
+  height: auto; /* Ensures the image maintains its aspect ratio */
+  display: block; /* Removes any unwanted space below the image */
+}
 
 a:hover,
 a.active {
   color: red !important;
+  font-weight: bold;
+
 }
