[FIX] CONTACT + SERVICES

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -47,7 +47,7 @@
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section">
+    <section id="about" class="about section colored-section">
 
       <div class="container">
 
@@ -81,7 +81,7 @@
 
 
     <!-- Services Section -->
-    <!-- Services Section --><section id="services" class="services section">
+    <!-- Services Section --><section id="services" class="services section" style="background-color: white;">
     <!-- Section Title -->
     <h2 class="sises-logo-title section-title" data-aos="fade-up">NOS SERVICES</h2>
 
@@ -89,74 +89,74 @@
       <div class="row gy-4">
 
         <!-- Logement Service -->
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-          <div class="icon flex-shrink-0">
-            <img src="assets/img/services/logemenet-.svg" alt="Logement Icon" class="custom-icon">
+        <div class="col-lg-4 col-md-6 service-item text-center" data-aos="fade-up" data-aos-delay="100">
+          <div class="icon mb-3">
+            <img src="assets/img/services/loge.png" alt="Logement Icon" class="custom-icon">
           </div>
-          <div>
-            <h4 class="title">LOGEMENT</h4>
-            <p class="description">Grâce à nos partenariats, nous vous proposons les solutions d'hébergement les plus adaptées à votre situation: résidences universitaires, colocations, etc.</p>
-          </div>
+          <h4 class="title">LOGEMENT</h4>
+          <p class="description">
+            Grâce à nos partenariats, nous vous proposons les solutions d'hébergement les plus adaptées à votre situation: résidences universitaires, colocations, etc.
+          </p>
         </div>
-        <!-- End Service Item -->
 
         <!-- Preparation aux Examen Service -->
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-          <div class="icon flex-shrink-0">
-            <img src="assets/img/services/style-masta.svg" alt="Preparation Icon" class="custom-icon"> <!-- Placeholder, adjust if needed -->
+        <div class="col-lg-4 col-md-6 service-item text-center" data-aos="fade-up" data-aos-delay="200">
+          <div class="icon mb-3">
+            <img src="assets/img/services/mastra.png" alt="Preparation Icon" class="custom-icon">
           </div>
-          <div>
-            <h4 class="title">PREPARATION AUX EXAMEN</h4>
-            <p class="description">Nous organisons des stages de préparation tout au long de l'année afin d'aborder sereinement les épreuves du Tage Mage, du TOEIC ou du TOEFL.</p>
-          </div>
-        </div><!-- End Service Item -->
+          <h4 class="title">PRÉPARATION AUX EXAMENS</h4>
+          <p class="description">
+            Nous organisons des stages de préparation tout au long de l'année afin d'aborder sereinement les épreuves du Tage Mage, du TOEIC ou du TOEFL.
+          </p>
+        </div>
 
         <!-- Conseil en Orientation Service -->
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-          <div class="icon flex-shrink-0">
+        <div class="col-lg-4 col-md-6 service-item text-center" data-aos="fade-up" data-aos-delay="300">
+          <div class="icon mb-3">
             <img src="assets/img/services/conseil-en-ortientation.svg" alt="Orientation Icon" class="custom-icon">
           </div>
-          <div>
-            <h4 class="title">CONSEIL EN ORIENTATION</h4>
-            <p class="description">Chaque étudiant est unique et chaque parcours particulier. Quels que soient vos ambitions et votre niveau, nous trouvons ensemble un projet qui vous correspond.</p>
-          </div>
-        </div><!-- End Service Item -->
+          <h4 class="title">CONSEIL EN ORIENTATION</h4>
+          <p class="description">
+            Chaque étudiant est unique et chaque parcours particulier. Quels que soient vos ambitions et votre niveau, nous trouvons ensemble un projet qui vous correspond.
+          </p>
+        </div>
 
         <!-- Inscription et Suivi Service -->
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-          <div class="icon flex-shrink-0">
-            <img src="assets/img/services/inscri-et-suivi.svg" alt="Inscription Icon" class="custom-icon">
+        <div class="col-lg-4 col-md-6 service-item text-center" data-aos="fade-up" data-aos-delay="400">
+          <div class="icon mb-3">
+            <img src="assets/img/services/fiche.png" alt="Inscription Icon" class="custom-icon">
           </div>
-          <div>
-            <h4 class="title">INSCRIPTION ET SUIVI</h4>
-            <p class="description">Nous prenons en charge vos démarches auprès de votre futur établissement, de l'inscription à votre arrivée sur place.</p>
-          </div>
-        </div><!-- End Service Item -->
+          <h4 class="title">INSCRIPTION ET SUIVI</h4>
+          <p class="description">
+            Nous prenons en charge vos démarches auprès de votre futur établissement, de l'inscription à votre arrivée sur place.
+          </p>
+        </div>
 
         <!-- Visa Service -->
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-          <div class="icon flex-shrink-0">
+        <div class="col-lg-4 col-md-6 service-item text-center" data-aos="fade-up" data-aos-delay="500">
+          <div class="icon mb-3">
             <img src="assets/img/services/passport-.svg" alt="Visa Icon" class="custom-icon">
           </div>
-          <div>
-            <h4 class="title">VISA</h4>
-            <p class="description">Nous prenons en charge vos formalités de demande de visa.</p>
-          </div>
-        </div><!-- End Service Item -->
+          <h4 class="title">VISA</h4>
+          <p class="description">
+            Nous prenons en charge vos formalités de demande de visa.
+          </p>
+        </div>
 
         <!-- Traduction Service -->
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-          <div class="icon flex-shrink-0">
-            <img src="assets/img/services/traduction-.svg" alt="Traduction Icon" class="custom-icon">
+        <div class="col-lg-4 col-md-6 service-item text-center" data-aos="fade-up" data-aos-delay="600">
+          <div class="icon mb-3">
+            <img src="assets/img/services/traduc.png" alt="Traduction Icon" class="custom-icon">
           </div>
-          <div>
-            <h4 class="title">TRADUCTION</h4>
-            <p class="description">Nous traduisons vos relevés de notes et diplômes.</p>
-          </div>
-        </div><!-- End Service Item -->
+          <h4 class="title">TRADUCTION</h4>
+          <p class="description">
+            Nous traduisons vos relevés de notes et diplômes.
+          </p>
+        </div>
 
       </div>
     </div>
+
   </section><!-- /Services Section -->
   <!-- Call To Action Section -->
   <section id="call-to-action" class="call-to-action section">
@@ -167,13 +167,23 @@
       <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
         <div class="col-xl-10">
           <div class="text-center">
-            <!-- Replace the h3 with an image -->
+            <!-- Replace h3 with image -->
             <img src="assets/img/whatssap-text.png" alt="Whatsapp Logo" class="whatsapp-logo">
 
-            <p style="color: white; font-weight: bold;">Cliquez sur le bouton ci-dessous pour nous envoyer un message sur WhatsApp. Nous sommes là pour répondre à toutes vos questions !.</p>
+            <p style="color: white; font-weight: bold;">
+              Cliquez sur le bouton ci-dessous pour nous envoyer un message sur WhatsApp. Nous sommes là pour répondre à toutes vos questions !
+            </p>
 
-            <!-- Replace the anchor tag with a button -->
-            <button class="btn btn-primary">Contact via Whatsapp</button>
+            <!-- WhatsApp Button -->
+            <a
+              class="custom-whatsapp-button"
+              href="https://wa.me/21624567714"
+              target="_blank"
+              rel="noopener noreferrer"
+
+            >
+              Envoyer un message WhatsApp
+            </a>
           </div>
         </div>
       </div>
@@ -203,8 +213,6 @@
               <div class="cert-image">
                 <img src="assets/img/certifications/cert-1.png" class="img-fluid" alt="Certification">
                 <div class="cert-overlay">
-                  <h4>Certification Title 1</h4>
-                  <a href="#" class="btn btn-sm btn-outline-light">En savoir plus</a>
                 </div>
               </div>
             </div>
@@ -216,8 +224,6 @@
               <div class="cert-image">
                 <img src="assets/img/certifications/cert-2.jpeg" class="img-fluid" alt="Certification">
                 <div class="cert-overlay">
-                  <h4>Certification Title 2</h4>
-                  <a href="#" class="btn btn-sm btn-outline-light">En savoir plus</a>
                 </div>
               </div>
             </div>
@@ -229,8 +235,6 @@
               <div class="cert-image">
                 <img src="assets/img/certifications/cert-3.jpg" class="img-fluid" alt="Certification">
                 <div class="cert-overlay">
-                  <h4>Certification Title 3</h4>
-                  <a href="#" class="btn btn-sm btn-outline-light">En savoir plus</a>
                 </div>
               </div>
             </div>
@@ -242,8 +246,6 @@
               <div class="cert-image">
                 <img src="assets/img/certifications/cert-4.jpg" class="img-fluid" alt="Certification">
                 <div class="cert-overlay">
-                  <h4>Certification Title 4</h4>
-                  <a href="#" class="btn btn-sm btn-outline-light">En savoir plus</a>
                 </div>
               </div>
             </div>
@@ -255,8 +257,6 @@
               <div class="cert-image">
                 <img src="assets/img/certifications/cert-5.jpg" class="img-fluid" alt="Certification">
                 <div class="cert-overlay">
-                  <h4>Certification Title 5</h4>
-                  <a href="#" class="btn btn-sm btn-outline-light">En savoir plus</a>
                 </div>
               </div>
             </div>
@@ -267,53 +267,56 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
       <!-- Section Title -->
-      <h2 class="sises-logo-title section-title" data-aos="fade-up">Contact</h2>
 
-      <div class="container ">
-        <div class="row justify-content-between">
-          <!-- Operating Hours -->
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="contact-hours">
-              <h4 class="fw-bold">HORAIRES D'OUVERTURE</h4>
-              <p>LUNDI - VENDREDI<br>8:00 - 17:00</p>
-                <p><strong>Email:</strong> contact&#64;sises-tunisie.com</p>
-              <div class="social-links mt-3">
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              </div>
+
+
+
+    <section id="contact" >
+      <div class="row">
+        <h2 class="sises-logo-title section-title" data-aos="fade-up">Contact</h2>
+        </div>
+    <div class="container-x">
+
+
+      <!-- Left Content, centered to the right -->
+      <div class="left-content">
+        <div class="f">
+          <div class="contact-hours" data-aos="fade-up" data-aos-delay="300">
+            <h4 class="fw-bold">HORAIRES D'OUVERTURE</h4>
+            <p>LUNDI - VENDREDI<br>8:00 - 17:00</p>
+            <p><strong>Email:</strong> contact&#64;sises-tunisie.com</p>
+            <div class="social-links mt-3">
+              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
+        </div>
+      </div>
 
-        <div class="col">
-          <!-- SISES TUNIS -->
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="contact-location">
-              <h4 class="fw-bold">SISES TUNIS</h4>
-              <p>31, Rue d'Algérie en face du consulat Algérien,<br>1000 Tunis, Tunisie<br>Tél: (+216) 71 24 7895</p>
-            </div>
-          </div>
+      <!-- Right Content, centered to the left -->
+      <div class="right-content">
+        <div class="xz" data-aos="fade-up" data-aos-delay="400">
+          <div class="contact-location">
+            <h4 class="fw-bold">SISES TUNIS</h4>
+            <p>31, Rue d'Algérie en face du consulat Algérien,<br>1000 Tunis, Tunisie<br>Tél: (+216) 71 24 7895</p>
+          </div>        </div>
 
-          <!-- SISES LAC 2 -->
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="contact-location">
-              <h4 class="fw-bold">SISES LAC 2</h4>
-              <p>Rue du Lac Windermere, Immeuble Babel, 3ème étage,<br>1053 Les Berges du Lac 2, Tunisie<br>Tél: (+216) 58 366 399</p>
-            </div>
-          </div>
+        <div class="z" data-aos="fade-up" data-aos-delay="500" >
+          <div class="contact-location">
+            <h4 class="fw-bold">SISES LAC 2</h4>
+            <p>Rue du Lac Windermere, Immeuble Babel, 3ème étage,<br>1053 Les Berges du Lac 2, Tunisie<br>Tél: (+216) 58 366 399</p>
+          </div>        </div>
 
-          <!-- SISES SFAX -->
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="400">
-            <div class="contact-location">
+        <div class="y">
+            <div class="contact-location" data-aos="fade-up" data-aos-delay="600">
               <h4 class="fw-bold">SISES SFAX</h4>
               <p>Rue Taher Sfar, Immeuble El Majed,<br>Centre-ville, 3000 Sfax, Tunisie<br>Tél: (+216) 74 400 267</p>
             </div>
           </div>
-        </div>
-        </div>
       </div>
-    </section>
+    </div>
+  </section>
 
   </main>
 
