--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,25 +2,28 @@
 
   <div class="container footer-top">
     <div class="row gy-4">
+      <!-- Footer About (Now col-lg-4 -> col-lg-4 remains) -->
       <div class="col-lg-4 col-md-6 footer-about">
         <a href="index.html" class="logo d-flex align-items-center">
           <span class="sitename">Hidayah</span>
         </a>
         <div class="footer-contact pt-3">
-          <p>A108 Adam Street</p>
-          <p>New York, NY 535022</p>
-          <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-          <p><strong>Email:</strong> <span>info&#64;example.com</span></p>
+          <p>Rue du Lac Windermere</p>
+          <p>1053 Les Berges du Lac 2, Tunisie</p>
+          <p class="mt-3"><strong>Tél:</strong> <span>(+216) 71 24 7895</span></p>
+          <p><strong>Email:</strong> <span>contact&#64;sises-tunisie.com</span></p>
         </div>
+
         <div class="social-links d-flex mt-4">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="#"><i class="bi bi-twitter-x"></i></a>
+          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
-      <div class="col-lg-2 col-md-3 footer-links">
+      <!-- Useful Links (col-lg-2 -> col-lg-4) -->
+      <div class="col-lg-4 col-md-6 footer-links">
         <h4>Useful Links</h4>
         <ul>
           <li><a href="#">Home</a></li>
@@ -31,7 +34,8 @@
         </ul>
       </div>
 
-      <div class="col-lg-2 col-md-3 footer-links">
+      <!-- Our Services (col-lg-2 -> col-lg-4) -->
+      <div class="col-lg-4 col-md-6 footer-links">
         <h4>Our Services</h4>
         <ul>
           <li><a href="#">Web Design</a></li>
@@ -41,29 +45,13 @@
           <li><a href="#">Graphic Design</a></li>
         </ul>
       </div>
-
-      <div class="col-lg-4 col-md-12 footer-newsletter">
-        <h4>Our Newsletter</h4>
-        <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-        <form action="forms/newsletter.php" method="post" class="php-email-form">
-          <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-          <div class="loading">Loading</div>
-          <div class="error-message"></div>
-          <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-        </form>
-      </div>
-
     </div>
   </div>
 
   <div class="container copyright text-center mt-4">
-    <p>© <span>Copyright</span> <strong class="px-1 sitename">Hidayah</strong> <span>All Rights Reserved</span></p>
+    <p>© <span>Copyright</span> <strong class="px-1 sitename">SISES</strong> <span>All Rights Reserved</span></p>
     <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you've purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      Designed by <a href="#">KHALIL-BJ</a>
     </div>
   </div>
 
