--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -22,6 +22,47 @@
   margin: auto !important;
   top: -25% !important;
 }
+.container-x {
+  display: flex;
+  justify-content: space-between; /* Creates space between left and right content */
+  align-items: center;
+  gap: 25px; /* 25px gap between the left and right content */
+}
+
+.left-content {
+  display: flex;
+  justify-content: flex-end; /* Align content to the right */
+  align-items: center;
+  width: 70%; /* Ensures it takes the full width */
+}
+
+.right-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  /* padding-left: 0px; */
+  margin-left: -20%;
+}
+
+.f {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 25px; /* Ensures there's a 25px gap between left and right content */
+}
+
+.xz,
+.z,
+.y {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px; /* Adds space between the right items */
+}
+
+
  .colored-section {
   background-color: #f8f9fa !important;
  }
@@ -96,7 +137,7 @@
 }
 
 .certification .cert-image:hover .cert-overlay {
-  opacity: 1;
+  opacity: 0.5;
 }
 
 .certification .cert-image:hover img {
@@ -133,8 +174,6 @@
 /* Contact Layout */
 .contact-hours, .contact-location {
   padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
   background-color: #fff;
   text-align: center;
 }
@@ -252,15 +291,33 @@
 }
 
 .custom-icon {
-  width: 200px; /* Adjust size as needed */
-  height: auto;
-  vertical-align: middle;
+  width: 280px;
+  height: 280px;
+  display: block;
+  margin: 0 auto;
+}
+
+.custom-whatsapp-button {
+  background-color: #d9534f;
+  color: white;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  font-weight: bold;
+  border-radius: 1rem;
+  transition: background-color 0.5s ease;
+}
+
+.custom-whatsapp-button:hover {
+  background-color: #c9302c;
+  color: white;
 }
 
 .service-item .title {
   font-size: 1.5rem;
   color: #333;
   margin-bottom: 10px;
+  margin-top: 10px;
+
 }
 
 .service-item .description {
