[FIX] FIX TITLES

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -195,7 +195,7 @@
 
     <section id="destination" class="section world-map-section ">
       <div class="row">
-      <h2 class="sises-logo-title section-title" data-aos="fade-up">Destination</h2>
+      <h2 class="sises-logo-title section-title" data-aos="fade-up">DESTINATIONS</h2>
     </div>
     <div class="row">
     <app-world-map/></div>
@@ -203,7 +203,7 @@
 
     <section id="certification" class="certification section colored-section">
 
-      <h2 class="sises-logo-title section-title" data-aos="fade-up">Certification</h2>
+      <h2 class="sises-logo-title section-title" data-aos="fade-up">CERTIFICATIONS</h2>
 
       <div class="container">
         <div class="row gy-4 justify-content-center">
@@ -274,7 +274,7 @@
 
     <section id="contact" >
       <div class="row">
-        <h2 class="sises-logo-title section-title" data-aos="fade-up">Contact</h2>
+        <h2 class="sises-logo-title section-title" data-aos="fade-up">CONTACT</h2>
         </div>
     <div class="container-x">
 
