[FIX] FIX TITLES

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -193,7 +193,7 @@
 
 
 
-    <section id="destination" class="section world-map-section ">
+    <section id="destination" class="section world-map-section " style="top: 40px;">
       <div class="row">
       <h2 class="sises-logo-title section-title" data-aos="fade-up">DESTINATIONS</h2>
     </div>
